Fixed bug with svg icon on mobile devices

--- a/src/blocks/cards/card/__button-info/card__button-info.css
+++ b/src/blocks/cards/card/__button-info/card__button-info.css
@@ -8,7 +8,6 @@
   box-shadow: 0px 10px 22px rgba(59, 74, 116, 0.1);
   border-radius: 10px;
   padding: 15px 8px;
-  cursor: pointer;
   animation: hide-button-info 0.4s forwards;
   opacity: 0;
   display: none;
