--- a/src/blocks/cards/card/__button/card__button.css
+++ b/src/blocks/cards/card/__button/card__button.css
@@ -9,6 +9,7 @@
   align-items: center;
   border: none;
   transition: outline 0.4s;
+  padding: 0;
 }
 
 .card__button:active {
